added circleback links to all aux pages

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-    <a href="recipes/ftoast.html">French Toast</a>
-    <a href="recipes/wfles.html">Waffles</a>
-    <a href="recipes/pcakes.html">Pancakes</a>
+    <h2><ul><a href="recipes/ftoast.html">French Toast</a></ul></h2>
+    <h2><ul><a href="recipes/wfles.html">Waffles</a></ul></h2>
+    <h2><ul><a href="recipes/pcakes.html">Pancakes</a></ul></h2>
 </body>
 </html>
