--- a/recipes/ftoast.html
+++ b/recipes/ftoast.html
@@ -5,6 +5,13 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>French Toast</h1>
+  <h1>French Toast</h1>
+
+
+
+
+
+
+  <a href="../index.html">Home Page</a>
 </body>
 </html>
