added images and skeleton for recipe layout

--- a/recipes/wfles.html
+++ b/recipes/wfles.html
@@ -6,8 +6,13 @@
 </head>
 <body>
   <h1>Waffles</h1>
-    
-
+  <img src="recipeimages/waffles.jpeg" alt="Some nicely done waffles" length="700" width="500">
+    <h2>Description</h2>
+      <p></p>
+    <h2>Ingredients</h2>
+      <ul></ul>
+    <h2>Steps</h2>
+      <ol></ol>
 
 
 
