--- a/recipes/ftoast.html
+++ b/recipes/ftoast.html
@@ -6,12 +6,16 @@
 </head>
 <body>
   <h1>French Toast</h1>
+  <img src="recipeimages/frenchtoast.jpeg" alt="Some nicely done french toast" length="500" width="400">
+    <h2>Description</h2>
+      <p></p>
+    <h2>Ingredients</h2>
+      <ul></ul>
+    <h2>Steps</h2>
+      <ol></ol>
 
 
 
-
-
-
-  <a href="../index.html">Home Page</a>
+  <p><a href="../index.html">Home Page</a></p>
 </body>
 </html>
