--- a/recipes/pcakes.html
+++ b/recipes/pcakes.html
@@ -5,8 +5,14 @@
     <title>Recipes</title>
 </head>
 <body>
-  <h1>Pancakes</h1>
-
+  <h1>Pancakes</h1> 
+  <img src="recipeimages/pancakes.jpeg" alt="Some nicely done pancakes" length="500" width="400">
+    <h2>Description</h2>
+      <p></p>
+    <h2>Ingredients</h2>
+      <ul></ul>
+    <h2>Steps</h2>
+      <ol></ol>  
 
 
 
