Added content and cleaned up code

--- a/recipes/ftoast.html
+++ b/recipes/ftoast.html
@@ -2,20 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recipes</title>
+    <title>French Toast</title>
 </head>
 <body>
   <h1>French Toast</h1>
   <img src="recipeimages/frenchtoast.jpeg" alt="Some nicely done french toast" length="500" width="400">
     <h2>Description</h2>
-      <p></p>
+      <p>A very simple and easy method to creating some perfectly done french toast. Great for an early morning or snack.</p>
     <h2>Ingredients</h2>
-      <ul></ul>
+      <ul>
+        <li>1/4 cup milk</li>
+        <li>1 egg</li>
+        <li>1/8 teaspoon salt</li>
+        <li>1/8 teaspoon vanilla extract</li>
+        <li>2 slices of bread</li>
+        <li>1 tablespoon olive oil</li>
+     </ul>
     <h2>Steps</h2>
-      <ol></ol>
-
-
-
+      <ol>
+        <li>Mix the milk, egg, salt, and vanilla extract in a shallow bowl or dish. Dip both sides of each piece of bread in the mixture.</li>
+        <li>Heat a large frying pan over medium-high heat and add oil. Cook both sides of the toast until light brown, 2-3 minutes.</li>
+        <li>Serve with optional sugar, cinnamon, or syrup.</li>
+      </ol>
   <p><a href="../index.html">Home Page</a></p>
 </body>
-</html>
+</html> 
