--- a/recipes/pcakes.html
+++ b/recipes/pcakes.html
@@ -2,22 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recipes</title>
+    <title>Pancakes</title>
 </head>
 <body>
   <h1>Pancakes</h1> 
   <img src="recipeimages/pancakes.jpeg" alt="Some nicely done pancakes" length="500" width="400">
     <h2>Description</h2>
-      <p></p>
+      <p>A great pancake recipe for a large amount of people. Also very simple to make and delicious.</p>
     <h2>Ingredients</h2>
-      <ul></ul>
+      <ul>
+       <li>1 1/2 cups all purpose flour</li>
+       <li>3 1/2 teaspoons baking powder</li>
+       <li>1 tablespoon white sugar</li>
+       <li>1/4 teaspoon salt</li>
+       <li>1 1/4 cups milk</li>
+       <li>3 tablespoons melted butter</li>
+       <li>1 egg</li>
+      </ul>
+
     <h2>Steps</h2>
-      <ol></ol>  
-
-
-
-
-
-  <a href="../index.html">Home Page</a>
-</body>
+      <ol>
+        <li>Sift all dry ingredients (baking powder, flour, sugar, salt) together in a large bowl. Make a well in the center and add milk, melted butter, and egg. Mix until smooth.</li>
+        <li>Heat a lightly oiled griddle or pan over medium-high heat, Pour the batter onto the griddle, using ~1/4 cups per pancake. Cook until bubbles form and edges are dry; 2-3 minutes. Flip and cook until brown. Repeat with remaining pancakes.</li>
+        <li>Serve with optional syrup, cinnamon, or fruit.</li>
+      </ol>  
+  <a href="../index.html">Home Page</a></body>
 </html>
