--- a/recipes/wfles.html
+++ b/recipes/wfles.html
@@ -8,15 +8,28 @@
   <h1>Waffles</h1>
   <img src="recipeimages/waffles.jpeg" alt="Some nicely done waffles" length="700" width="500">
     <h2>Description</h2>
-      <p></p>
+      <p>Simple and effective recipe to make some delicious waffles. I would consider serving with syrup.</p>
     <h2>Ingredients</h2>
-      <ul></ul>
+      <ul>
+        <li>2 cups all purpose flour</li>
+        <li>1 teaspoon salt</li>
+        <li>4 teaspoons baking powder</li>
+        <li>2 tablespoons white sugar</li>
+        <li>2 large eggs</li>
+        <li>1 1/2 cups milk</li>
+        <li>1/3 cup melted butter</li>
+        <li>1 teaspoon vanilla extract</li>
+      </ul>
     <h2>Steps</h2>
-      <ol></ol>
-
-
-
-
+      <ol>
+        <li>Gather all ingredients.</li>
+        <li>Mix flour, salt, baking powder, and sugar together in a large bowl and set aside. Warm the waffle iron to desired temperature.</li>
+        <li>Beat eggs in a separate; stir in milk, melted butter, and vanilla.</li>
+        <li>Combine both mixtures and beat until blended.</li>
+        <li>Pour batter into the preheated waffle iron.</li>
+        <li>Cook wafles until golden and crisp.</li>
+        <li>Serve alongside optional syrup or cinnamon.</li>
+      </ol>
   <a href="../index.html">Home Page</a>
 </body>
 </html>
